update : struct2
